--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">JNV MAU</h3>
+                        <h3 class="mb-0">JAWAHAR NAVODAYA VIDYALAYA, MAU</h3>
                         <div class="subheading mb-3">HIGH SCHOOL</div>
                         <p>PERCENTAGE: 96.6 </p>
                     </div>
