--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
                     Mau, Uttar Pradesh, India <br>mo.no.-7652067198
                     <a href="mailto:vishalpal18228@gmail.com">vishalpal18228@gmail.com</a>
                 </div>
-                <p class="lead mb-5">I am an undergraduate student at NITK KARNATAKA. I am pursuing B.tech in computer
-                    science and engineering department. Currently i am in 2nd year. <br> I know C and C++ programming
-                    languages. I like competitive coding. I have knowledge of data structure and algorithm.Currently I
+                <p class="lead mb-5">I am an Undergraduate student at NITK KARNATAKA. I am pursuing B.tech in Computer
+                    Science and Engineering department. Currently i am in 2nd year. <br> I know C and C++ programming
+                    languages. I like competitive coding. I have knowledge of Data Structure and Algorithm.Currently I
                     am learning
-                    front end web development.
+                    front end Web Development.
                 </p>
                 <div class="social-icons">
-                    <a class="social-icon" href="https://www.linkedin.com/in/vishal-kumar-pal-a57970217"><i
+                    <a class="social-icon" href="https://www.linkedin.com/in/vishal-kumar-pal-a57970217" target="_blank"><i
                             class="fab fa-linkedin-in"></i></a>
-                    <a class="social-icon" href="https://github.com/dakvishal"><i class="fab fa-github"></i></a>
+                    <a class="social-icon" href="https://github.com/dakvishal" target="_blank"><i class="fab fa-github"></i></a>
                     <a class="social-icon" href="https://twitter.com/VishalK02585503" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a class="social-icon" href="https://www.facebook.com/vishalkumar.pal.56829" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 </div>
@@ -95,7 +95,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">NIT SURATHKAL KARNATAKA</h3>
                         <div class="subheading mb-3">Bachelor of Technology</div>
-                        <div>Computer Science and engineering</div>
+                        <div>Computer Science and Engineering</div>
                         <p>CGPA: 8.05</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">December 2020 - currently</span></div>
@@ -103,9 +103,9 @@
 
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">JNV bangalore</h3>
-                        <div class="subheading mb-3">intermediate</div>
-                        <p>PERCENTAGE: 96</p>
+                        <h3 class="mb-0">JAWAHAR NAVODAYA VIDYALAYA, BANGLORE URBAN</h3>
+                        <div class="subheading mb-3">Intermediate</div>
+                        <p>PERCENTAGE: 96.0</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">june 2018 - march 2020</span></div>
                 </div>
@@ -113,7 +113,7 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">JAWAHAR NAVODAYA VIDYALAYA, MAU</h3>
-                        <div class="subheading mb-3">HIGH SCHOOL</div>
+                        <div class="subheading mb-3">High School</div>
                         <p>PERCENTAGE: 96.6 </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">june 2016 - march 2018</span></div>
@@ -135,7 +135,7 @@
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        learnign HTML CSS & JAVASCRIPT
+                        Learnign HTML CSS & JAVASCRIPT
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -143,7 +143,7 @@
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        C & C++ programming language
+                        C & C++ programming languages
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -161,7 +161,7 @@
                     <div class="flex-grow-1">
                         <!-- <h3 class="mb-0">IBM BUILD SKILL- CAMP</h3> -->
                         <div class="subheading mb-3">FFE</div>
-                        <p><br>2 star coder at codechef.</p>
+                        <p>2 star coder at codechef.</p>
                     </div>
                 </div>
             </div>
@@ -171,7 +171,7 @@
         <section class="resume-section" id="interests">
             <div class="resume-section-content">
                 <h2 class="mb-5">Interests</h2>
-                <p>I am interested in technology specially in computer science. I like web development, competiting
+                <p>I am interested in technology specially in computer science. I like web development, competitive 
                     coding and problem solving. </p>
                 <p class="mb-0">Apart from these i like to read books (basically novels) , playing badminton,volleyball,
                     travelling to new places, listening music , and exploring the
