--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     Mau, Uttar Pradesh, India <br>mo.no.-7652067198
                     <a href="mailto:vishalpal18228@gmail.com">vishalpal18228@gmail.com</a>
                 </div>
-                <p class="lead mb-5">I am an Undergraduate student at NITK KARNATAKA. I am pursuing B.tech in Computer
-                    Science and Engineering department. Currently i am in 2nd year. <br> I know C and C++ programming
+                <p class="lead mb-5">I am an Undergraduate student at NITK SURATHKAL. I am pursuing B.tech in Computer
+                    Science and Engineering department. Currently i am in 3rd year. <br> I know C and C++ programming
                     languages. I like competitive coding. I have knowledge of Data Structure and Algorithm.Currently I
                     am learning
                     front end Web Development.
@@ -93,10 +93,10 @@
                 <h2 class="mb-5">Education</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">NIT SURATHKAL KARNATAKA</h3>
+                        <h3 class="mb-0">NITK SURATHKAL KARNATAKA</h3>
                         <div class="subheading mb-3">Bachelor of Technology</div>
                         <div>Computer Science and Engineering</div>
-                        <p>CGPA: 8.05</p>
+                        <p>CGPA: 8.11</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">December 2020 - currently</span></div>
                 </div>
